Fixed header spacing issue.

--- a/app/style.css
+++ b/app/style.css
@@ -75,14 +75,14 @@ hgroup {
 }
 
 h1, h2 {
-    line-height: 0em;
+    line-height: 1.3em;
 }
 
 h1 {
-    font-size: 1.5em;
+    font-size: 2em;
 }
 h2 {
-    font-size: 0.8em;
+    font-size: 1em;
 }
 
 canvas {
